--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ afterEvaluate {
     publishing {
         publications {
             release(MavenPublication){
-                from components.release
+                from components.findByName("release")
 
                 groupId='com.github.c-128'
                 artifactId = 'contentapi'
